--- a/src/main/resources/org/deshand/ui/desings/ProfileDesing.html
+++ b/src/main/resources/org/deshand/ui/desings/ProfileDesing.html
@@ -10,17 +10,15 @@
  <body>
   <vaadin-vertical-layout size-full>
    <vaadin-horizontal-layout width-full margin :center>
-    <vaadin-inline-date-time-field _id="inlineDateTimeField"></vaadin-inline-date-time-field>
-    <vaadin-date-time-field _id="dateTimeField" :middle></vaadin-date-time-field>
-    <vaadin-image _id="image"></vaadin-image>
-   </vaadin-horizontal-layout>
-   <vaadin-horizontal-layout width-full margin :center>
     <vaadin-label caption="Name" plain-text _id="name">
       ... 
     </vaadin-label>
     <vaadin-label caption="Role" plain-text _id="role">
       ... 
     </vaadin-label>
+   </vaadin-horizontal-layout>
+   <vaadin-horizontal-layout>
+    <vaadin-link caption="Link" _id="link"></vaadin-link>
    </vaadin-horizontal-layout>
    <vaadin-horizontal-layout margin>
     <org_deshand_ui_components-go-to-main-view-link></org_deshand_ui_components-go-to-main-view-link>
